--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
         <div class="contact-grid">
           <div class="card">
             <h3>Details</h3>
+            <!-- ! card images -->
+            <div class="card-img">
+              <img src="./images/images.jpeg" width="400px" alt="">
+            </div>
             <div class="contact-list">
               <div><b>Email:</b> akashtiwari1014@gmail.com</div>
               <div><b>Phone:</b> +91 8718828288</div>
